--- a/src/main/resources/error.properties
+++ b/src/main/resources/error.properties
@@ -2,3 +2,4 @@ CMS001= Currency does not exist.
 CMS002= Currency with given name already exists.
 CMS003= Currency name must be provided.
 CMS004= Currency has been already deleted.
+HED001= Header is required.
