--- a/build.gradle
+++ b/build.gradle
@@ -30,11 +30,18 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation 'com.google.code.gson:gson:2.13.1'
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.keycloak:keycloak-spring-boot-starter:21.0.2'
+    implementation 'org.keycloak:keycloak-admin-client:21.0.2'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.keycloak:keycloak-spring-boot-starter:21.0.2'
+    implementation 'org.keycloak:keycloak-admin-client:21.0.2'
 }
 
 tasks.named('test') {
